fix castling logic + gui